<resources>
    <string name="app_name">Biarritz Salon</string>

    <string name="nav_home">O nas</string>
    <string name="nav_prices">Cennik</string>
    <string name="nav_contact">Kontakt</string>
    <string name="nav_order">Rezerwacja</string>
    <string name="nav_profile">Profil</string>

    <string name="home_header">Salon fryzjerski Biarritz</string>
    <string name="home_text1">Salon Fryzjerski Biarritz powstał z myślą o ludziach, którzy lubią mieć piękne i zadbane
        włosy. Jesteśmy dla tych, dla których wygląd i fryzura są w życiu istotne. Dla tych, którzy lubią zaszaleć z
        fryzurą lub potrzebują zmian.
    </string>
    <string name="home_text2">Doskonała obsługa, najlepsze preparaty do stylizacji i pielęgnacji włosów, najnowsze
        techniki strzyżenia i farbowania, nowinki w dziedzinie fryzjerstwa – to wszystko znajdziesz w naszym salonie.
        Nasze stylistki nieustannie się rozwijają, łącząc techniki wschodu i zachodu umiejętnie radzą sobie z każdym
        typem włosów. Zapewniamy miłą atmosferę i pyszną kawę.
    </string>
    <string name="home_text3">W naszym salonie fryzjerskim na Kochanowskiego 2 w Gliwicach pracują doskonali fryzjerzy.
        Nasi styliści mają bogatą wiedzę na temat włosów i profesjonalnych preparatów do farbowania i stylizacji,
        posiadają wieloletnie doświadczenie w dziedzinie fryzjerstwa. Regularnie biorą udział w szkoleniach i uczą się u
        znanych fryzjerów-stylistów, udoskonalają się aby świadczyć usługi na najwyższym poziomie. Ambitni i nieustanie
        rozwijający nowe umiejętności we fryzjerstwie, pracujący z pasją i miłością do swojego zawodu.
    </string>


    <string name="price_header">Cennik</string>
    <string name="price_man_header">Mężczyźni</string>
    <string name="price_woman_header">Kobiety</string>
    <string name="price_children_header">Dzieci</string>
    <string name="price_coloring_header">Koloryzacja*</string>
    <string name="price_other_procedures_header">Inne zabiegi*</string>
    <string name="price_man_beard_mustache_name">Broda i wąsy</string>
    <string name="price_man_beard_mustache">10-20 zł</string>
    <string name="price_man_haircut_name">Strzyżenie*</string>
    <string name="price_man_haircut">39 zł</string>
    <string name="price_man_haircut_cover_name">Strzyżenie + Cover 5′</string>
    <string name="price_man_haircut_cover">69 zł</string>
    <string name="price_woman_modeling_name">Modelowanie</string>
    <string name="price_woman_modeling">39-45-49 zł</string>
    <string name="price_woman_haircut_name">Strzyżenie*</string>
    <string name="price_woman_haircut">59-65-69 zł</string>
    <string name="price_woman_polishing_hair_name">Polerowanie włosów</string>
    <string name="price_woman_polishing_hair">od 65-79 zł</string>
    <string name="price_woman_hairstyle_name">Upięcie</string>
    <string name="price_woman_hairstyle">od 69-120 zł</string>
    <string name="price_woman_wedding_hairstyle_name">Upięcie ślubne</string>
    <string name="price_woman_wedding_hairstyle">od 119-179 zł</string>
    <string name="price_children_boys_haircut_name">Strzyżenie chłopięce**</string>
    <string name="price_children_boys_haircut">29 zł</string>
    <string name="price_children_girls_haircut_name">Strzyżenie dziewczynki**</string>
    <string name="price_children_girls_haircut">29-49 zł</string>
    <string name="price_children_text">Po strzyżeniu niespodzianka dla dziecka</string>
    <string name="price_coloring_one_color_name">Farbowanie (1 kolor)</string>
    <string name="price_coloring_one_color">110-119-129 zł</string>
    <string name="price_coloring_two_colors_name">Farbowanie (2+ kolorów)</string>
    <string name="price_coloring_two_colors">129-139-149 zł</string>
    <string name="price_coloring_highlights_name">Pasemka</string>
    <string name="price_coloring_highlights">100-110-120 zł</string>
    <string name="price_coloring_reflection_name">Refleksy</string>
    <string name="price_coloring_reflection">39-45-49 zł</string>
    <string name="price_coloring_discoloration_name">Dekoloryzacja</string>
    <string name="price_coloring_discoloration">69-79-89 zł</string>
    <string name="price_coloring_toning_name">Tonowanie</string>
    <string name="price_coloring_toning">40-50-60 zł</string>
    <string name="price_others_perm_name">Bio-Trwała ondulacja</string>
    <string name="price_others_perm">149-179-259 zł</string>
    <string name="price_others_hair_reconstruction_name">Rekonstrukcja włosa*</string>
    <string name="price_others_hair_reconstruction">39-49-59 zł</string>
    <string name="price_reference_first">* Cena obejmuje mycie i modelowanie</string>
    <string name="price_reference_second">** Dzieci do 16 lat</string>

    <string name="contact_header">Kontakt</string>
    <string name="contact_address_header">Salon Fryzjerski Biarritz</string>
    <string name="contact_work_time_header">Godziny otwarcia:</string>
    <string name="contact_phone_number_first">511-552-511</string>
    <string name="contact_phone_number_second">511-334-511</string>
    <string name="contact_email">
        <a href='mailto:biarritzsalon@gmail.com'>biarritzsalon@gmail.com</a>
    </string>
    <string name="contact_site">
        <a href='http://biarritz.pl'>www.biarritz.pl</a>
    </string>
    <string name="contact_address">ul. Jana Kochanowskiego 2</string>
    <string name="contact_address_second">44-100 Gliwice</string>
    <string name="contact_weekdays">poniedziałek – piątek:</string>
    <string name="contact_work_time_weekdays">8:00 – 20:00</string>
    <string name="contact_saturday">"sobota:</string>
    <string name="contact_work_time_saturday">9:00 – 18:00</string>
    <string name="contact_sunday">"niedziela:</string>
    <string name="contact_work_time_sunday">10:00 – 18:00</string>
    <string name="reservation_button_text">Zarezerwuj wizytę online</string>
    <string name="contact_parking_text">Obok salonu znajdują się bezpłatne miejsca parkingowe w bliskiej odległości od
        wejścia (od strony ul. Kochanowskiego)
    </string>
    <string name="google_maps_button_text">Otwórz w google maps</string>

    <string name="reservation_header">Rezerwacja Online</string>
    <string name="reservation_text_first">Salon fryzjerski Biarritz przyjmuje chętnych 7 DNI W TYGODNIU, z możliwością
        zapisu telefonicznie lub Online rezerwacją. Zarezerwować termin można w dowolnym czasie na dowolny wolny termin.
    </string>
    <string name="reservation_text_second">Rezerwacja jest darmowa, wystarczy raz założyć konto w serwisie
        rezerwacyjnym, a później tylko wybrać interesującą nas godzinę oraz usługę. Jeśli potrzebujecie więcej niż jedną
        usługę, można rezerwować dłuższy czas pracy fryzjera.
    </string>
    <string name="order_reservation_button_text">Zarezerwuj teraz</string>

    <string name="dialog_woman">Dialog 1</string>
    <string name="dialog_woman_message_text">Info for woman</string>
    <string name="dialog_man_message_text">Info for man</string>
    <string name="dialog_children_message_text">Info for children</string>
    <string name="set_visit">Set visit</string>
    <string name="ok">Ok</string>
    <string name="pin_text_hint"><font size="15">Enter pin</font></string>
    <string name="woman_profile_header">Woman profile</string>
    <string name="man_profile_header">Man profile</string>
    <string name="child_profile_header">Children profile</string>

    <plurals name="days">
        <item quantity="one">дня</item>
        <item quantity="few">дней</item>
        <item quantity="many">дней</item>
        <item quantity="other">дней</item>
    </plurals>

    <plurals name="visits">
        <item quantity="one">посещение</item>
        <item quantity="few">посещения</item>
        <item quantity="many">посещений</item>
        <item quantity="other">посещений</item>
    </plurals>

    <plurals name="times">
        <item quantity="one">раз</item>
        <item quantity="few">раза</item>
        <item quantity="many">раз</item>
        <item quantity="other">раз</item>
    </plurals>

</resources>
