<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>

    <item
            android:id="@+id/navigation_prices"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/nav_prices"/>

    <item
            android:id="@+id/navigation_contacts"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/nav_contact"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/nav_profile"/>

    <item
            android:id="@+id/navigation_order"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/nav_order"/>

</menu>
