<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding">

        <TextView
                android:layout_marginTop="@dimen/header_text_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/header_text_size"
                android:text="@string/contact_header"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_curl_height"
                android:layout_marginTop="@dimen/image_curl_margin_top"
                android:background="@drawable/ic_zawitka"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_phone_number_first"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_phone_number_second"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:autoLink="all"
                android:textColorLink="@color/colorPrimary"
                android:text="@string/contact_email"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:autoLink="all"
                android:textColorLink="@color/colorPrimary"
                android:text="@string/contact_site"/>

        <Button android:id="@+id/reservation_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:padding="15dp"
                style="@style/ButtonStyle"
                android:text="@string/reservation_button_text" />

        <TextView
                android:layout_marginTop="@dimen/subhead_text_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/header_text_size"
                android:text="@string/contact_address_header"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_curl_height"
                android:layout_marginTop="@dimen/image_curl_margin_top"
                android:background="@drawable/ic_zawitka"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_address"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_address_second"/>

        <Button android:id="@+id/google_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:padding="15dp"
                style="@style/ButtonStyle"
                android:text="@string/google_maps_button_text" />

        <TextView
                android:layout_marginTop="@dimen/subhead_text_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/header_text_size"
                android:text="@string/contact_work_time_header"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_curl_height"
                android:layout_marginTop="@dimen/image_curl_margin_top"
                android:background="@drawable/ic_zawitka"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_weekdays"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/simple_text_margin_bottom"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_work_time_weekdays"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:textStyle="bold"
                android:text="@string/contact_saturday"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/simple_text_margin_bottom"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_work_time_saturday"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:textStyle="bold"
                android:text="@string/contact_sunday"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_work_time_sunday"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/subhead_text_margin_top"
                android:layout_height="@dimen/image_curl_height"
                android:background="@drawable/ic_zawitka"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/simple_text_margin_bottom"
                android:textSize="@dimen/subhead_text_size"
                android:text="@string/contact_parking_text"/>

        <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/map_parking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_curl_margin_top"
                android:src="@drawable/map_parking1"/>

    </LinearLayout>

</ScrollView>