<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding">

        <TextView
                android:layout_marginTop="@dimen/header_text_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/header_text_size"
                android:text="@string/reservation_header"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_curl_height"
                android:layout_marginTop="@dimen/image_curl_margin_top"
                android:background="@drawable/ic_zawitka"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/simple_text_margin_top"
                android:textSize="@dimen/simple_text_size"
                android:text="@string/reservation_text_first"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/simple_text_margin_top"
                android:textSize="@dimen/simple_text_size"
                android:text="@string/reservation_text_second"/>

        <Button android:id="@+id/reservation_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:padding="15dp"
                style="@style/ButtonStyle"
                android:text="@string/order_reservation_button_text" />

    </LinearLayout>
</ScrollView>