<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:minWidth="400dp"
        android:minHeight="200dp">

    <TextView
            android:id="@+id/womanProfileHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/profile_margin"
            android:layout_gravity="start"
            android:text="@string/man_profile_header"
            app:textAllCaps="true"
            android:textSize="@dimen/header_text_size"/>

    <TextView
            android:id="@+id/manDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/profile_margin"
            android:textSize="@dimen/header_text_size"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/ok"
                android:textSize="@dimen/header_text_size"
                app:textAllCaps="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/profile_margin"/>

        <TextView
                android:id="@+id/btnSetVisit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/set_visit"
                android:textSize="@dimen/header_text_size"
                app:textAllCaps="true"
                android:layout_toStartOf="@+id/btnOk"
                android:layout_marginEnd="@dimen/profile_margin"
                android:layout_alignTop="@+id/btnOk"/>
    </RelativeLayout>
</LinearLayout>